--- a/index.html
+++ b/index.html
@@ -10,13 +10,20 @@
 </head>
 <body bgcolor="khaki">
     <header>
-        <div>
-            <h3>Brian Angoda's Website</h3>
+        &nbsp;&nbsp;&nbsp;  <div>
+            <h1>Brian Angoda's Website</h1>
             <a href="index.html"><strong>Home</strong></a> &nbsp;&nbsp;&nbsp;
             <a href="about.html"><strong>About Me</strong></a>&nbsp;&nbsp;
             <a href="contact.html"><strong>Contact Me</strong></a>&nbsp;&nbsp;
             <a href="hobbies.html"><strong>My Hobbies</strong></a>&nbsp;&nbsp;
         </div>
     </header>
+    <main>
+        <h3>Welcome to my personal website</h3>
+        <br>
+        <p>Well Well Well! Now that you're here, let's me get you started on some cool top secret information about me 😁</p>
+        <br>
+
+    </main>
 </body>
 </html>
