added more content to the website

--- a/about.html
+++ b/about.html
@@ -18,5 +18,35 @@
             <a href="hobbies.html"><strong>My Hobbies</strong></a>&nbsp;&nbsp;
         </div>
     </header>
+    <main>
+        <h2>About Me</h2>
+        <p>Let me reintroduce you to my life!</p>
+        <p>I am a first year software engineering student at Makerere University.</p>
+        <p>My main goals after this course can be summarized as follows:</p>
+        <h3>MY GOALS AFTER COMPLETING BSSE COURSE</h3>
+        <table border="1">
+            <thead>
+                <th>Area</th>
+                <th>Goals</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>Java</strong></td>
+                    <td>Build a solid understanding of the Java programming language and be able to build scalable backend applications using the the Java Spring Boot Framework.</td>
+                </tr>
+                <tr>
+                    <td><strong>Android</strong></td>
+                    <td>I should be able to build both native and cross-platform mobile applications with rich user experiences using the technologies I learn before and after this course.</td>
+                </tr>
+                <tr>
+                    <td><strong>Distributed Systems</strong></td>
+                    <td>I am a strong fan of distributed systems, right from the components in cars, to missile systems. My goal therefore is to be able to built fault tolerant distributed systems after this course.</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
+    <footer>
+        <p>Copyright &copy; 2022. All Rights Reserved. Terms and Conditions Apply.</p>
+    </footer>
 </body>
 </html>
