--- a/contact.html
+++ b/contact.html
@@ -18,5 +18,24 @@
             <a href="hobbies.html"><strong>My Hobbies</strong></a>&nbsp;&nbsp;
         </div>
     </header>
+    <main>
+        <h2>Contact Me</h2>
+        <p>I am open to connect with you if you'd like.</p>
+        <p>Send me a message using the form below</p>
+        <form action="mailto:brianangoda99@gmail.com" method="post" enctype="text/plain">
+            <label for="">Name</label>&nbsp;&nbsp;&nbsp;<input type="text" name="name" required>
+            <br><br>
+            <label for="">Email</label>&nbsp;&nbsp;&nbsp;<input type="email" name="email" required>
+            <br><br>
+            <label for="message">Your message</label> <br> <br> <textarea name="message" id="" cols="30" rows="10">Type your message here please..
+            </textarea>
+            <br>
+            <input type="submit" value="Send Message!">
+
+        </form>
+    </main>
+    <footer>
+        <p>Copyright &copy; 2022. All Rights Reserved. Terms and Conditions Apply.</p>
+    </footer>
 </body>
 </html>
