--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
         <br>
         <p>Well Well Well! Now that you're here, let's me get you started on some cool top secret information about me 😁</p>
         <br>
-
+        <img src="images/Brian.jpg" alt="Brian" width="320" height="350">
     </main>
+    <footer>
+        <p>Copyright &copy; 2022. All Rights Reserved. Terms and Conditions Apply.</p>
+    </footer>
 </body>
 </html>
