added new landing page

--- a/index.html
+++ b/index.html
@@ -3,30 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A personal website built using plain HTML elements for Brian Angoda - Software Engineering Student at Makerere University.">
-    <meta name="author" content="Brian Angoda">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brian Angoda's Website</title>
+    <title>My Site</title>
+    <link rel="stylesheet" href="my_style.css">
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
-<body bgcolor="khaki">
-    <header>
-        &nbsp;&nbsp;&nbsp;  <div>
-            <h1>Brian Angoda's Website</h1>
-            <a href="index.html"><strong>Home</strong></a> &nbsp;&nbsp;&nbsp;
-            <a href="about.html"><strong>About Me</strong></a>&nbsp;&nbsp;
-            <a href="contact.html"><strong>Contact Me</strong></a>&nbsp;&nbsp;
-            <a href="hobbies.html"><strong>My Hobbies</strong></a>&nbsp;&nbsp;
-        </div>
-    </header>
-    <main>
-        <h3>Welcome to my personal website</h3>
-        <br>
-        <p>Well Well Well! Now that you're here, let's me get you started on some cool top secret information about me 😁</p>
-        <br>
-        <img src="images/Brian.jpg" alt="Brian" width="320" height="350">
-    </main>
-    <footer>
-        <p>Copyright &copy; 2022. All Rights Reserved. Terms and Conditions Apply.</p>
-    </footer>
+<body>
+    <div class="row">
+        <a href="my_biography.html">
+            <div class="col" id="col-1">
+                <p>My Bio</p>
+            </div>
+        </a>
+        <div class="col" id="col-2"></div>
+        <a href="image.html">
+            <div class="col" id="col-3">
+                <p>My Photo</p>
+            </div>
+        </a>
+    </div>
+    <div class="row">
+        <div class="col" id="col-4"></div>
+        <a href="education_history.html">
+            <div class="col" id="col-5">
+                <p>My Education History</p>
+            </div>
+        </a>
+        <div class="col" id="col-6"></div>
+    </div>
+    <div class="row">
+        <a href="hobbies.html">
+            <div class="col" id="col-7">
+                <p>Your Hobbies</p>
+            </div>
+        </a>
+        <div class="col" id="col-8"></div>
+        <a href="contact.html">
+            <div class="col" id="col-9">
+                <p>Contact Me</p>
+            </div>
+        </a>
+    </div>
 </body>
+
 </html>
